chore: ignore data files and generated datasets
WHAT: Add data files, generated datasets, and tokenizer cache to .gitignore

WHY: Large binary files and generated datasets should not be tracked in version control to keep repository size manageable

HOW: Added patterns for GSM8K-*.jsonl (generated datasets), gsm8k/ (raw data), *.zip (archives), and tokenizer_cache/ (ModelScope downloads)

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,14 @@ wheels/
 
 # Virtual environments
 .venv
+
+# Generated datasets
+GSM8K-*.jsonl
+*.jsonl
+
+# Data files
+gsm8k/
+*.zip
+
+# Model tokenizer cache
+tokenizer_cache/
